src/k8s-files/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: k8s-tutorial
  labels:
    name: k8s-tutorial
