src/k8s-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingapi-deployment      # Name of the deployment
  namespace: k8s-tutorial       # In which namespace it will be created
  labels:
    app: pingapi-pod
spec:
  replicas: 1                   # How many pods will be created
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: pingapi-pod          # Which Pods to manage
  template:
    metadata:
      labels:
        app: pingapi-pod
    spec:
      containers:
      - name: pingapi           # Name of the container
        image: nginx
        # env:
        #   - name: ASPNETCORE_URLS
        #     value: http://+:80
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
