src/k8s-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restapi-service     # Name of the service
  namespace: k8s-tutorial   # In which namespace it will be created
spec:
  selector:
    app: restapi-pod        # Which Pods will be targeted
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 18080           # Port used by the service
    targetPort: 80        # Target port in the Pod
