src/k8s-files/webserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  namespace: k8s-demo-namespace
  labels:
    app: webserver
spec:
  replicas: 3
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: hugoparedes/ping-api:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: k8s-demo-namespace
spec:
  selector:
    app: webserver
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 80
