src/k8s-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress               # Name of the Ingress
  namespace: k8s-tutorial             # In which namespace it will be created
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: k8s-tutorial.local           # Host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restapi-service
            port:
              number: 5000
